Add support for variable fonts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ std = []
 simd = []
 # Enable this flag to parallelize font loading using threads.
 parallel = ["rayon", "hashbrown", "hashbrown/rayon"]
+# Enable support for variable fonts.
+variable-fonts = ["ttf-parser/variable-fonts"]
 
 [dependencies]
 ttf-parser = { version = "0.25", default-features = false, features = [
