--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,12 @@ exclude = ["dev/**"]
 maintenance = { status = "experimental" }
 
 [features]
-# If using no default features, you must enable either hashbrown or std.
-default = ["simd", "hashbrown"]
+# If using no default features, you must enable either no_std or std.
+default = ["simd", "no_std"]
+
+no_std = ["hashbrown", "ttf-parser/no-std-float"]
 # Enable this flag to use std::HashMap instead of hashbrown::HashMap
-std = []
+std = ["ttf-parser/std"]
 # Enable this flag to leverage SIMD usage on x86/x86_64 platforms.
 simd = []
 # Enable this flag to parallelize font loading using threads.
@@ -30,7 +32,7 @@ variable-fonts = ["ttf-parser/variable-fonts"]
 
 [dependencies]
 ttf-parser = { version = "0.25", default-features = false, features = [
-    "opentype-layout", "no-std-float"
+    "opentype-layout"
 ] }
 hashbrown = { version = "0.16", optional = true }
 rayon = { version = "1.11", optional = true }
